tests/ui/nll/unused-mut-issue-50343.stderr
error: variable does not need to be mutable
  --> $DIR/unused-mut-issue-50343.rs:7:33
   |
LL |     vec![(42, 22)].iter().map(|(mut x, _y)| ()).count();
   |                                 ^^^^^
   |
note: the lint level is defined here
  --> $DIR/unused-mut-issue-50343.rs:3:9
   |
LL | #![deny(unused_mut)]
   |         ^^^^^^^^^^
help: remove this `mut`
   |
LL -     vec![(42, 22)].iter().map(|(mut x, _y)| ()).count();
LL +     vec![(42, 22)].iter().map(|(x, _y)| ()).count();
   |

error: aborting due to 1 previous error

